feat: some fixes

--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -3,7 +3,7 @@
     <h1 class="profile__title title">Profile</h1>
     <div class="profile__body">
       <div class="profile__left">
-        <label class="tickets-field__toggler" for="user-name">
+        <label class="tickets-form__field-toggler" for="user-name">
           <svg
             fill="none"
             height="15"
@@ -18,13 +18,13 @@
           </svg>
           <input
             autocomplete="off"
-            class="tickets-form__field"
+            class="tickets-form__field-inner"
             id="user-name"
             placeholder="Name"
             type="text"
           />
         </label>
-        <label class="tickets-field__toggler" for="user-password">
+        <label class="tickets-form__field-toggler" for="user-password">
           <svg height="15" viewBox="0 0 26.31 34.98" width="13" xmlns="http://www.w3.org/2000/svg">
             <g data-name="Layer 2">
               <path
@@ -35,13 +35,13 @@
           </svg>
           <input
             autocomplete="off"
-            class="tickets-form__field"
+            class="tickets-form__field-inner"
             id="user-password"
             placeholder="Password"
             type="password"
           />
         </label>
-        <label class="tickets-field__toggler" for="user-email">
+        <label class="tickets-form__field-toggler" for="user-email">
           <svg
             fill="none"
             height="15"
@@ -56,13 +56,13 @@
           </svg>
           <input
             autocomplete="off"
-            class="tickets-form__field"
+            class="tickets-form__field-inner"
             id="user-email"
             placeholder="Email"
             type="email"
           />
         </label>
-        <label class="tickets-field__toggler" for="user-phone">
+        <label class="tickets-form__field-toggler" for="user-phone">
           <svg
             fill="none"
             height="15"
@@ -77,7 +77,7 @@
           </svg>
           <input
             autocomplete="off"
-            class="tickets-form__field"
+            class="tickets-form__field-inner"
             id="user-phone"
             placeholder="Phone"
             type="tel"
