feat: optimize code

--- a/src/html/includes/admin.html
+++ b/src/html/includes/admin.html
@@ -2,214 +2,224 @@
   <div class="admin__container section-container">
     <h1 class="admin__title title">Admin page</h1>
     <div class="admin__body">
-      <div class="user-list">
-        <h2 class="user-list__title">User list</h2>
-        <div class="user-list__container">
-          <table class="user-list__table">
-            <tr class="user-list__row">
-              <th class="user-list__data">ID</th>
-              <th class="user-list__data">Username</th>
-              <th class="user-list__data">Password</th>
-              <th class="user-list__data">Email</th>
-              <th class="user-list__data">Phone</th>
-              <th class="user-list__data">Delete</th>
+      <div class="admin__users">
+        <h2 class="admin__users-title">User list</h2>
+        <div class="admin__users-container">
+          <table class="admin__table">
+            <tr class="admin__table-row">
+              <th class="admin__table-data">ID</th>
+              <th class="admin__table-data">Username</th>
+              <th class="admin__table-data">Password</th>
+              <th class="admin__table-data">Email</th>
+              <th class="admin__table-data">Phone</th>
+              <th class="admin__table-data">Delete</th>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">1</td>
-              <td class="user-list__data">User1312123131</td>
-              <td class="user-list__data">qwerty1234</td>
-              <td class="user-list__data">user@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">1</td>
+              <td class="admin__table-data">User1312123131</td>
+              <td class="admin__table-data">qwerty1234</td>
+              <td class="admin__table-data">user@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
 
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="user-list__row">
-              <td class="user-list__data">2</td>
-              <td class="user-list__data">User2131</td>
-              <td class="user-list__data">qwerty3131311234</td>
-              <td class="user-list__data">user31312@mail.ru</td>
-              <td class="user-list__data">+375339999999</td>
+            <tr class="admin__table-row">
+              <td class="admin__table-data">2</td>
+              <td class="admin__table-data">User2131</td>
+              <td class="admin__table-data">qwerty3131311234</td>
+              <td class="admin__table-data">user31312@mail.ru</td>
+              <td class="admin__table-data">+375339999999</td>
 
-              <td class="user-list__data data-btn">
-                <span class="data-btn-remove"></span>
+              <td class="admin__table-data admin__data-btn">
+                <span class="admin__btn-remove"></span>
               </td>
             </tr>
           </table>
         </div>
       </div>
-      <div class="edit-ticket">
-        <h2 class="user-list__title">Ticket</h2>
-        <form action="" class="edit-ticket__body">
-          <div class="edit-ticket__data">
-            <span class="data__title">Edit date</span>
-            <ul class="data__list">
-              <li class="data__list-item">
-                <input class="data__value" type="date" value="2022-01-01" />
-                <span class="data-btn-remove"></span>
+      <div class="admin-tickets admin-edit-ticket">
+        <h2 class="admin__users-title">Ticket</h2>
+        <form action="" class="admin-tickets__body">
+          <div class="admin-tickets__data">
+            <span class="admin-tickets__data-title">Edit date</span>
+            <ul class="admin-tickets__list">
+              <li class="admin-tickets__list-item">
+                <input class="admin-tickets__data-value" type="date" value="2022-01-01" />
+                <span class="admin__btn-remove"></span>
               </li>
-              <li class="data__list-item">
-                <input class="data__value" type="date" value="2022-01-01" />
-                <span class="data-btn-remove"></span>
+              <li class="admin-tickets__list-item">
+                <input class="admin-tickets__data-value" type="date" value="2022-01-01" />
+                <span class="admin__btn-remove"></span>
               </li>
-              <li class="data__list-item">
-                <input class="data__value" type="date" value="2022-01-01" />
-                <span class="data-btn-remove"></span>
-              </li>
-            </ul>
-            <button class="data__add-btn" type="submit">ADD</button>
-          </div>
-          <div class="edit-ticket__data">
-            <span class="data__title">Edit time</span>
-            <ul class="data__list">
-              <li class="data__list-item">
-                <input class="data__value" type="time" value="12:12" />
-                <span class="data-btn-remove"></span>
-              </li>
-              <li class="data__list-item">
-                <input class="data__value" type="time" value="12:12" />
-                <span class="data-btn-remove"></span>
-              </li>
-              <li class="data__list-item">
-                <input class="data__value" type="time" value="12:12" />
-                <span class="data-btn-remove"></span>
+              <li class="admin-tickets__list-item">
+                <input class="admin-tickets__data-value" type="date" value="2022-01-01" />
+                <span class="admin__btn-remove"></span>
               </li>
             </ul>
-            <button class="data__add-btn" type="submit">ADD</button>
+            <button class="admin-tickets__data-add" type="submit">ADD</button>
           </div>
-          <div class="edit-ticket__data">
-            <span class="data__title">Edit price</span>
-            <div class="edit-ticket__price-container">
-              <label class="edit-ticket__price-inner" for="basic-price">
-                <span class="price-inner__title">Basic 18+(€)</span>
-                <input class="edit-ticket__field" id="basic-price" type="number" value="20" />
+          <div class="admin-tickets__data">
+            <span class="admin-tickets__data-title">Edit time</span>
+            <ul class="admin-tickets__list">
+              <li class="admin-tickets__list-item">
+                <input class="admin-tickets__data-value" type="time" value="12:12" />
+                <span class="admin__btn-remove"></span>
+              </li>
+              <li class="admin-tickets__list-item">
+                <input class="admin-tickets__data-value" type="time" value="12:12" />
+                <span class="admin__btn-remove"></span>
+              </li>
+              <li class="admin-tickets__list-item">
+                <input class="admin-tickets__data-value" type="time" value="12:12" />
+                <span class="admin__btn-remove"></span>
+              </li>
+            </ul>
+            <button class="admin-tickets__data-add" type="submit">ADD</button>
+          </div>
+          <div class="admin-tickets__data">
+            <span class="admin-tickets__data-title">Edit price</span>
+            <div class="admin-tickets__price-container">
+              <label class="admin-tickets__price-inner" for="basic-price">
+                <span class="admin-tickets__price-title">Basic 18+(€)</span>
+                <input
+                  class="admin-tickets__price-field"
+                  id="basic-price"
+                  type="number"
+                  value="20"
+                />
               </label>
-              <label class="edit-ticket__price-inner" for="senior-price">
-                <span class="price-inner__title">Senior 65+(€)</span>
-                <input class="edit-ticket__field" id="senior-price" type="number" value="10" />
+              <label class="admin-tickets__price-inner" for="senior-price">
+                <span class="admin-tickets__price-title">Senior 65+(€)</span>
+                <input
+                  class="admin-tickets__price-field"
+                  id="senior-price"
+                  type="number"
+                  value="10"
+                />
               </label>
             </div>
           </div>
