--- a/src/html/includes/login.html
+++ b/src/html/includes/login.html
@@ -2,7 +2,7 @@
   <div class="login__container section-container">
     <h1 class="login__title title">Login</h1>
     <form action="" class="login__body">
-      <label class="login__field auth-field" for="username">
+      <label class="login__field input-field" for="username">
         <svg
           class="login__field-icon"
           width="20"
@@ -17,14 +17,14 @@
           />
         </svg>
         <input
-          class="login__field-data auth-field-data"
+          class="login__field-data input-field-data"
           type="text"
           placeholder="Username"
           id="username"
           autocomplete="off"
         />
       </label>
-      <label class="login__field auth-field" for="password">
+      <label class="login__field input-field" for="password">
         <svg
           class="login__field-icon"
           width="20"
@@ -40,19 +40,19 @@
           </g>
         </svg>
         <input
-          class="login__field-data auth-field-data"
+          class="login__field-data input-field-data"
           type="password"
           placeholder="Password"
           id="password"
         />
       </label>
       <div class="login__body-bottom">
-        <button class="login__btn-signin auth-btn" type="submit">Sign in</button>
-        <button class="login__btn-reset auth-btn">Reset</button>
+        <button class="login__btn-signin input-btn" type="submit">Sign in</button>
+        <button class="login__btn-reset input-btn">Reset</button>
       </div>
-      <span class="login__undertext-inner auth-undertext-inner"
+      <span class="login__undertext-inner input-undertext-inner"
         >Not on Sign in yet?
-        <a class="login__undertext--link auth-undertext-link" href="register-page.html"
+        <a class="login__undertext--link input-undertext-link" href="register-page.html"
           >Register</a
         ></span
       >
