--- a/src/scss/sections/main/_main.scss
+++ b/src/scss/sections/main/_main.scss
@@ -33,3 +33,96 @@ input {
 button {
   cursor: pointer;
 }
+
+.input-undertext-inner {
+  font-weight: var(--typography-fontWeightMedium);
+  color: var(--palette-secondary-text);
+  @include media-breakpoint-up(xl) {
+    font-size: 22px;
+  }
+  @include media-breakpoint-between(md, xl) {
+    font-size: 18px;
+  }
+  @include media-breakpoint-down(md) {
+    font-size: 16px;
+  }
+}
+
+.input-undertext-link {
+  font-size: 25px;
+  padding: 10px;
+  color: var(--palette-primary-dark);
+  transition-duration: 0.3s;
+  @include media-breakpoint-up(xl) {
+    font-size: 22px;
+  }
+  @include media-breakpoint-between(md, xl) {
+    font-size: 18px;
+  }
+  @include media-breakpoint-down(md) {
+    font-size: 16px;
+  }
+  &:hover {
+    color: var(--palette-tertiary-text);
+  }
+  &:active {
+    color: var(--palette-tertiary-dark);
+  }
+}
+
+.input-field {
+  display: flex;
+  align-items: center;
+  font-weight: var(--typography-fontWeightMedium);
+  color: var(--palette-secondary-text);
+  border: 2px solid var(--palette-primary-main);
+  @include media-breakpoint-up(xl) {
+    font-size: 28px;
+    padding: 10px 20px;
+  }
+  @include media-breakpoint-between(md, xl) {
+    font-size: 20px;
+    padding: 10px 15px;
+  }
+  @include media-breakpoint-between(sm, md) {
+    padding: 10px;
+  }
+  @include media-breakpoint-down(md) {
+    font-size: 16px;
+  }
+  @include media-breakpoint-down(sm) {
+    padding: 5px 10px;
+  }
+}
+
+.input-field-data {
+  width: 100%;
+  margin-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.input-btn {
+  display: flex;
+  padding: 10px 30px;
+  font-weight: var(--typography-fontWeightMedium);
+  font-size: 28px;
+  color: var(--palette-primary-text);
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  transition-duration: 0.3s;
+  @include media-breakpoint-down(xl) {
+    font-size: 20px;
+  }
+  @include media-breakpoint-down(md) {
+    font-size: 16px;
+  }
+  &:hover {
+    box-shadow: var(--shadows-1);
+  }
+  &:active {
+    background-color: var(--palette-tertiary-main);
+    color: var(--palette-secondary-text);
+  }
+}
