--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -37,81 +37,77 @@
       justify-content: center;
     }
   }
-}
-
-.footer-top {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  @include media-breakpoint-down(md) {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.footer-right-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 900px;
-  width: 100%;
-  @include media-breakpoint-down(lg) {
-    flex-direction: column;
-  }
-}
-
-.footer-nav {
-  display: flex;
-  gap: 10px;
-  &__list-link {
-    width: 100%;
+  &-top {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: var(--typography-fontWeightLight);
-    letter-spacing: 2px;
-    border-radius: 25px;
-    transition-duration: 0.3s;
-    white-space: nowrap;
-    @include media-breakpoint-up(xl) {
-      padding: 10px 25px;
-      font-size: 22px;
-    }
-    @include media-breakpoint-down(xl) {
-      padding: 10px 15px;
-    }
-    @include media-breakpoint-between(lg, xl) {
-      font-size: 20px;
-    }
-    @include media-breakpoint-between(md, lg) {
-      font-size: 18px;
-    }
+    justify-content: space-between;
+    gap: 20px;
     @include media-breakpoint-down(md) {
-      font-size: 16px;
-    }
-    &:not(:hover) {
-      color: var(--palette-primary-text);
-    }
-    &:hover {
-      color: var(--palette-tertiary-text);
-      box-shadow: var(--shadows-3);
+      flex-direction: column;
+      align-items: center;
     }
   }
-}
-
-.footer-bottom {
-  &__list {
+  &-right-nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
-    padding: 20px;
-    border-top: 3px solid var(--palette-primary-light);
+    max-width: 900px;
+    width: 100%;
+    @include media-breakpoint-down(lg) {
+      flex-direction: column;
+    }
   }
-  &__list-item {
-    &:nth-child(2) {
+  &-nav {
+    display: flex;
+    gap: 10px;
+    &__list-link {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: var(--typography-fontWeightLight);
+      letter-spacing: 2px;
+      border-radius: 25px;
+      transition-duration: 0.3s;
+      white-space: nowrap;
+      @include media-breakpoint-up(xl) {
+        padding: 10px 25px;
+        font-size: 22px;
+      }
+      @include media-breakpoint-down(xl) {
+        padding: 10px 15px;
+      }
+      @include media-breakpoint-between(lg, xl) {
+        font-size: 20px;
+      }
+      @include media-breakpoint-between(md, lg) {
+        font-size: 18px;
+      }
       @include media-breakpoint-down(md) {
-        display: none;
+        font-size: 16px;
+      }
+      &:not(:hover) {
+        color: var(--palette-primary-text);
+      }
+      &:hover {
+        color: var(--palette-tertiary-text);
+        box-shadow: var(--shadows-3);
+      }
+    }
+  }
+  &-bottom {
+    &__list {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 50px;
+      padding: 20px;
+      border-top: 3px solid var(--palette-primary-light);
+    }
+    &__list-item {
+      &:nth-child(2) {
+        @include media-breakpoint-down(md) {
+          display: none;
+        }
       }
     }
   }
