feat: some fixes

--- a/src/html/includes/register.html
+++ b/src/html/includes/register.html
@@ -2,7 +2,7 @@
   <div class="register__container section-container">
     <h1 class="register__title title">Register</h1>
     <form action="" class="register__body">
-      <label class="register__field auth-field" for="username">
+      <label class="register__field input-field" for="username">
         <svg
           class="register__field-icon"
           width="20"
@@ -17,14 +17,14 @@
           />
         </svg>
         <input
-          class="register__field-data auth-field-data"
+          class="register__field-data input-field-data"
           type="text"
           placeholder="Username"
           id="username"
           autocomplete="off"
         />
       </label>
-      <label class="register__field auth-field" for="email">
+      <label class="register__field input-field" for="email">
         <svg
           class="register__field-icon"
           width="20"
@@ -39,14 +39,14 @@
           />
         </svg>
         <input
-          class="register__field-data auth-field-data"
+          class="register__field-data input-field-data"
           type="email"
           placeholder="Email"
           id="email"
           autocomplete="off"
         />
       </label>
-      <label class="register__field auth-field" for="password">
+      <label class="register__field input-field" for="password">
         <svg
           class="register__field-icon"
           width="20"
@@ -62,13 +62,13 @@
           </g>
         </svg>
         <input
-          class="register__field-data auth-field-data"
+          class="register__field-data input-field-data"
           type="password"
           placeholder="Password"
           id="password"
         />
       </label>
-      <label class="register__field auth-field" for="password-confirm">
+      <label class="register__field input-field" for="password-confirm">
         <svg
           class="register__field-icon"
           width="20"
@@ -81,18 +81,18 @@
           />
         </svg>
         <input
-          class="register__field-data auth-field-data"
+          class="register__field-data input-field-data"
           type="password"
           placeholder="Confirm password"
           id="password-confirm"
         />
       </label>
       <div class="register__body-bottom">
-        <button class="register__btn-signup auth-btn" type="submit">Sign up</button>
+        <button class="register__btn-signup input-btn" type="submit">Sign up</button>
       </div>
-      <span class="register__undertext-inner auth-undertext-inner"
+      <span class="register__undertext-inner input-undertext-inner"
         >Already have an account?
-        <a class="register__undertext--link auth-undertext-link" href="login-page.html"
+        <a class="register__undertext--link input-undertext-link" href="login-page.html"
           >Log in</a
         ></span
       >
