--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -99,8 +99,8 @@
     }
     @include media-breakpoint-down(md) {
       width: 100%;
-      height: 100vh;
-      padding-bottom: 170px;
+      height: calc(100vh - 120px);
+      padding-bottom: 90px;
     }
     &__container {
       overflow-y: scroll;
@@ -124,7 +124,7 @@
       @include media-breakpoint-down(md) {
         justify-content: center;
         position: absolute;
-        bottom: 118px;
+        bottom: 10px;
         left: 0;
         display: flex;
         border-top: 1px solid var(--palette-primary-light);
@@ -197,7 +197,6 @@
     @include media-breakpoint-between(sm, md) {
       display: grid;
       position: relative;
-      justify-content: center;
       width: 100%;
       padding-top: 10px;
       padding-bottom: 10px;
@@ -214,6 +213,9 @@
     }
     @include media-breakpoint-between(s, sm) {
       gap: 10px;
+    }
+    @include media-breakpoint-up(s) {
+      justify-content: center;
     }
     @include media-breakpoint-down(s) {
       gap: 5px;
