feat: some fixes

--- a/src/html/includes/admin.html
+++ b/src/html/includes/admin.html
@@ -226,5 +226,6 @@
         </form>
       </div>
     </div>
+    <a class="profile__link" href="index.html">Back to Louvre</a>
   </div>
 </section>
