--- a/src/html/includes/register.html
+++ b/src/html/includes/register.html
@@ -96,6 +96,7 @@
           >Log in</a
         ></span
       >
+      <a class="profile__link" href="index.html">Back to Louvre</a>
     </form>
   </div>
 </section>
