--- a/src/html/includes/login.html
+++ b/src/html/includes/login.html
@@ -56,6 +56,7 @@
           >Register</a
         ></span
       >
+      <a class="profile__link" href="index.html">Back to Louvre</a>
     </form>
   </div>
 </section>
